--- a/pages/community/home/home.wxml
+++ b/pages/community/home/home.wxml
@@ -8,11 +8,14 @@
 
 <!-- 搜索框 -->
 <view class="cu-bar search bg-white">
+  <!-- 发表 -->
   <view class="action">
     <text class="cuIcon-roundadd"></text>
     <text>发表</text>
   </view>
-  <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-2.jpg);"></view>
+  <!-- 头像 -->
+  <view class="cu-avatar round" style="background-image:url({{avatar}});"></view>
+  <!-- 消息 -->
   <view class="action">
     <text class="cuIcon-mark"></text>
     <text>消息</text>
@@ -41,15 +44,15 @@
         <view class="content flex-sub">
           <view>凯尔</view>
           <view class="text-gray text-sm flex justify-between">
-            2019年12月3日
+            2021/01/21 22:59
           </view>
         </view>
       </view>
     </view>
     <!-- 第二部分：帖子内容 -->
-    <view class="text-content">
+    <navigator url="/pages/community/details/details" class="text-content">
       折磨生出苦难，苦难又会加剧折磨，凡间这无穷的循环，将有我来终结！
-    </view>
+    </navigator>
     <!-- 第三部分：图片 -->
     <view class="grid flex-sub padding-lr col-3 grid-square">
       <!--列数通过“col-3”来控制-->
@@ -59,10 +62,16 @@
       </view>
     </view>
     <!-- 第四部分：数据 -->
-    <view class="text-gray text-sm text-right padding">
-      <text class="cuIcon-attentionfill margin-lr-xs"></text> 10
-      <text class="cuIcon-appreciatefill margin-lr-xs"></text> 20
-      <text class="cuIcon-messagefill margin-lr-xs"></text> 30
+    <view class="text-gray text-lg text-right padding">
+      <!-- <text class="cuIcon-attentionfill margin-lr-xs"></text>  -->
+      <!-- 点赞 -->
+      <text class="cuIcon-appreciatefill margin-lr-xs text-red"></text>
+      <!-- 收藏 -->
+      <text class="cuIcon-favorfill margin-lr-xs text-red"></text>
+      <!-- 评论 -->
+      <text class="cuIcon-messagefill margin-lr-xs"></text>
+      <!-- 分享 -->
+      <text class="cuIcon-forwardfill margin-lr-xs"></text>
     </view>
   </view>
 </view>
