--- a/pages/play/home/home.wxml
+++ b/pages/play/home/home.wxml
@@ -8,7 +8,7 @@
 
 <!-- 搜索框 -->
 <view class="cu-bar search bg-white">
-  <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-2.jpg);"></view>
+  <view class="cu-avatar round" style="background-image:url({{avatar}});"></view>
   <view class="search-form round">
     <text class="cuIcon-search"></text>
     <input type="text" placeholder="输入活动码进行搜索" confirm-type="search"></input>
