--- a/pages/community/home/home.wxml
+++ b/pages/community/home/home.wxml
@@ -6,21 +6,21 @@
   <view slot="content">社区</view>
 </cu-custom>
 
-<!-- 搜索框 -->
+<!-- 发表和消息 -->
 <view class="cu-bar search bg-white">
   <!-- 发表 -->
-  <view class="action">
+  <navigator url="/pages/community/edit/edit" class="action padding-left-xs">
     <text class="cuIcon-roundadd"></text>
     <text>发表</text>
-  </view>
+  </navigator>
   <!-- 头像 -->
-  <view class="cu-avatar round" style="background-image:url({{avatar}});"></view>
+  <!-- <view class="cu-avatar round" style="background-image:url({{avatar}});"></view> -->
   <!-- 消息 -->
-  <view class="action">
+  <navigator url="/pages/me/message/message" class="action padding-right-xs">
     <text class="cuIcon-mark"></text>
-    <text>消息</text>
+    <text class="padding-left-xs">消息</text>
     <view class="cu-tag bg-red round sm">99+</view>
-  </view>
+  </navigator>
 </view>
 
 <!-- 分类导航 -->
@@ -32,6 +32,22 @@
     </view>
   </view>
 </scroll-view>
+
+<!-- 进行评论的输入框 -->
+<view class="cu-bar foot input {{InputBottom!=0?'cur':''}}" bindtap="hideIcon" style="bottom:{{InputBottom}}px" hidden="{{hiddenInput}}">
+  <!-- 取消按钮 -->
+  <view class="action" bindtap="hiddenInput">
+    <text class="cuIcon-unfold text-grey"></text>
+  </view>
+  <!-- 输入框 -->
+  <input class="solid-bottom" focus="{{inputShowed}}" bindfocus="InputFocus" bindblur="InputBlur" adjust-position="{{false}}" focus="{{false}}" maxlength="300" cursor-spacing="10"></input>
+  <!-- 表情按钮 -->
+  <view class="action">
+    <text class="cuIcon-emojifill text-grey"></text>
+  </view>
+  <!-- 发送按钮 -->
+  <button class="cu-btn bg-green shadow">发送</button>
+</view>
 
 <!-- 贴子列表 -->
 <view class="cu-card dynamic">
@@ -69,7 +85,7 @@
       <!-- 收藏 -->
       <text class="cuIcon-favorfill margin-lr-xs text-red"></text>
       <!-- 评论 -->
-      <text class="cuIcon-messagefill margin-lr-xs"></text>
+      <text class="cuIcon-messagefill margin-lr-xs" bindtap="ShowInput"></text>
       <!-- 分享 -->
       <text class="cuIcon-forwardfill margin-lr-xs"></text>
     </view>
