--- a/pages/organization/home/home.wxml
+++ b/pages/organization/home/home.wxml
@@ -1,10 +1,5 @@
 <!--pages/organization/home/home.wxml-->
 
-<!-- 头部导航 -->
-<!-- <cu-custom bgImage="https://image.weilanwl.com/color2.0/plugin/cjkz2329.jpg">
-  <view slot="content">社团</view>
-</cu-custom> -->
-
 <scroll-view scroll-y class="scrollPage">
   <view class="UCenter-bg">
     <image src="/images/logo.png" class="png" mode="widthFix"></image>
@@ -12,8 +7,6 @@
     <view class="margin-top-sm">
       <text>By:桂林理工大学数学建模协会</text>
     </view>
-    <!-- 倒影图 -->
-    <!-- <image src="/images/logo.png" mode="scaleToFill" class="gif-wave"></image> -->
   </view>
 </scroll-view>
 
@@ -45,55 +38,22 @@
     </view>
   </view>
 </scroll-view>
-<scroll-view scroll-x class="bg-white nav">
-  <view class="flex text-center">
-    <view class="cu-item flex-sub {{index==TabCur2?'text-orange cur':''}}" bindtap="tabSelect2" wx:for="{{tabNav}}"
-      wx:key data-id="{{index}}">
-      {{item.name}}
-    </view>
-  </view>
-</scroll-view>
 
 <!-- 关于我们 -->
-<view class='margin-sm bg-white padding-xl radius shadow-lg' wx:if="{{TabCur==0}}">
-  <!-- 标题 -->
-  <view class='text-center margin-bottom text-lg'>{{aboutTitle}}</view>
-  <!-- 内容 -->
-  <view class='text-content'>
-    <view class='margin-top-sm' wx:for="{{aboutContent}}">{{item.content}}</view>
-  </view>
-  <!-- <form>
-    <view class="cu-form-group" wx:for="{{aboutTable}}">
-      <view class="title">{{item.data.key}}</view>
-      <input placeholder="{{item.data.value}}" disabled></input>
-    </view>
-  </form> -->
-</view>
+<myAbout wx:if="{{TabCur==0}}"></myAbout>
 
 <!-- 成员名录 -->
-<!--pages/category/category.wxml-->
-{{historyList[0].people[0].name}}
-<view class='margin-sm bg-white padding-xl radius shadow-lg' wx:if="{{TabCur==1}}">
-  <view class="flex flex-wrap">
-    <view class="basis-xs bg-grey padding-xs radius">
-      <view class="text-df text-center padding-tb-xs" wx:for="historyList">{{item.people}}</view>
-      <!-- <view class="text-df bg-white text-center padding-tb-xs">秘书部</view>
-      <view class="text-df text-center padding-tb-xs">秘书部</view>
-      <view class="text-df text-center padding-tb-xs">秘书部</view>
-      <view class="text-df text-center padding-tb-xs">秘书部</view>
-      <view class="text-df text-center padding-tb-xs">秘书部</view>
-      <view class="text-df text-center padding-tb-xs">秘书部</view> -->
-    </view>
-  </view>
-</view>
+<myHistory wx:if="{{TabCur==1}}"></myHistory>
 
+<!-- 指导老师 -->
+<myTeacher wx:if="{{TabCur==2}}"></myTeacher>
 
+<!-- 成员名单 -->
+<myMembers wx:if="{{TabCur==3}}"></myMembers>
 
+<!-- 联系我们 -->
+<myContact wx:if="{{TabCur==4}}"></myContact>
 
 
 <!-- 为了不让底部导航栏挡住内容 -->
-<view class="padding-top-xl">
-  <view class="padding-top-xl">
-    <view class="padding-top-sm"></view>
-  </view>
-</view>
+<myBottomExposed></myBottomExposed>
