备份，怕改废了

--- a/component/index/meIndex/meIndex.wxss
+++ b/component/index/meIndex/meIndex.wxss
@@ -1,4 +1,4 @@
-/* pages/me/home/home.wxss */
+/* component/index/meIndex/meIndex.wxss */
 
 @import "/colorui/main.wxss";
 @import "/colorui/icon.wxss";
